crates/plotnik-tests/tests/macro_diagnostics/fail/missing_grammar.rs
plotnik::query! {
    "Q = (program)"
}

fn main() {}
